fixed h2 padding on mobile

--- a/src/styles/global/App.scss
+++ b/src/styles/global/App.scss
@@ -324,6 +324,7 @@ h2 {
   }
   @media (max-width: 520px) {
     font-size: clamp(1.5rem, 13vw, 4rem);
+    padding: 30px 0;
   }
 }
 
